samples/_failures_safe/1760960632_7d51da_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_35827658.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_35827658.c:159:5: error: expected expression at end of input
  159 |     token->line =
      |     ^~~~~
./samples/SAFE/__tmp_35827658.c:159:5: error: expected declaration or statement at end of input
